[tool.poetry]
name = "admin-api"
version = "0.1.0"
description = "arXiv user admin API"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
fastapi = "^0.115"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "9ca8d42b0fa85986e602875811c44735c1cbe4b8"}
pymysql = "^1.1.0"
ruamel-yaml = "^0.18.6"
python-json-logger = "^2.0.7"
python-dateutil = "^2.8.2"
fastapi-pagination = "^0.12.26"
pyjwt = "^2.9.0"
python-keycloak = "^4.3.0"
requests = "^2.32.3"
jwcrypto = "^1.5.6"
httpx = "^0.27.2"
cachetools = "^5.5.0"
sqlalchemy = "^2.0.36"
arxiv-bizlogic = {git = "https://github.com/arXiv/arxiv-keycloak.git", rev = "master", subdirectory = "bizlogic"}
asgi-correlation-id = "^4.3.4"
asgi-logger = "^0.1.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
types-pymysql = "^1.1.0.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
